paradire/flask_app/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: links

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: links-app-deployment
  namespace: links
spec:
  replicas: 1
  selector:
    matchLabels:
      app: links-app
  template:
    metadata:
      labels:
        app: links-app
    spec:
      containers:
      - name: links-app
        image: northamerica-northeast1-docker.pkg.dev/phx-01he5rx4wsv/paradire/links-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: links-app-service
  namespace: links
spec:
  selector:
    app: links-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: links-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "links.paradire.alpha.phac.gc.ca"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "links.paradire.alpha.phac.gc.ca"
      tls:
        mode: SIMPLE
        credentialName: wildcard-ssl-production

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: links-virtualservice
  namespace: links
spec:
  hosts:
  - links.paradire.alpha.phac.gc.ca
  gateways:
  - istio-system/links-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: links-app-service.links.svc.cluster.local
        port:
          number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  loadBalancerIP: 35.203.42.179
  selector:
    istio: ingressgateway
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
